fixing layout issues on button

--- a/frontend/src/styles/_uswds-theme-custom-styles.scss
+++ b/frontend/src/styles/_uswds-theme-custom-styles.scss
@@ -633,3 +633,25 @@ iframe[id^="ethnio-screener-"] {
     transform-origin: left bottom;
   }
 }
+
+// Search Table Save Button Responsive Layout
+.search-table-save-wrapper {
+  .display-flex.flex-align-start {
+    flex-direction: column;
+    align-items: flex-start;
+    
+    button {
+      margin-bottom: 1rem;
+      text-wrap: nowrap;
+    }
+    
+    @include at-media("tablet-lg") {
+      flex-direction: row;
+      align-items: flex-start;
+      
+      button {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
